# doorito

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  Procfile.dev  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  doorito  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
PEPs/: ABOUT.md  INDEX.md
PEPs/IMPLEMENTED/: LATEST.md
PEPs/PEP_0000_template/: discussions.md  journal.md  plan.md  research.md  summary.md
PEPs/PEP_0001_ai_upload_portal/: plan.md  summary.md
PEPs/PEP_0002_rename_fileupload_ingestfile/: discussions.md  plan.md  research.md  summary.md
PEPs/PEP_0003_extend_data_models/: discussions.md  journal.md  plan.md  research.md  summary.md
PEPs/PEP_0004_event_outbox_infrastructure/: discussions.md  journal.md  plan.md  research.md  summary.md
PEPs/PEP_0006_s3_upload_storage/: discussions.md  journal.md  plan.md  research.md  summary.md
PEPs/PEP_0007_file_portal_pipeline/: discussions.md  journal.md  plan.md  research.md  summary.md
accounts/: __init__.py  admin.py  apps.py  models.py
aikb/: admin.md  architecture.md  cli.md  conventions.md  dependencies.md  deployment.md  models.md  services.md  signals.md  specs-roadmap.md  tasks.md
boot/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
common/: admin.py  apps.py  fields.py  models.py  tasks.py  utils.py
frontend/: decorators.py  urls.py
frontend/forms/: auth.py
portal/: admin.py  apps.py  models.py  tasks.py
scripts/: pep-archive.sh  pep-complete.sh  pep-new.sh
templates/: base.html
uploads/: admin.py  apps.py  models.py  tasks.py
(+84 files in other folders)
