[project]
name = "doorito"
version = "0.1.0"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["boot"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "DJ",    # flake8-django
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "DJ001",  # avoid nullable CharField (Django convention in this project)
    "DJ012",  # model method ordering (too risky to reorder existing code)
    "RUF005", # list concatenation vs unpacking (stylistic, too noisy)
    "RUF012", # mutable class attributes (standard for django-configurations settings)
    "RUF013", # implicit Optional (typing improvement for later)
    "RUF022", # __all__ sorting (stylistic)
    "SIM102", # nested if → combined if (too opinionated for Django patterns)
    "B904",   # raise from (changes exception chaining behavior)
]

[tool.ruff.lint.isort]
known-first-party = ["boot"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]
"*/tests/*.py" = ["S101", "B017"]
"manage.py" = ["E402"]
"doorito" = ["E402"]
"boot/asgi.py" = ["E402"]
"boot/wsgi.py" = ["E402"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "boot.settings"
DJANGO_CONFIGURATION = "Dev"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
